[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/Object.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/sliced_fruits.png" type="Texture" id=2]
[ext_resource path="res://objects/Food.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 11 )

[sub_resource type="CircleShape2D" id=2]
radius = 35.0

[sub_resource type="Animation" id=3]
resource_name = "float"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ) ]
}

[node name="Food" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="HitBox" parent="." index="0"]
shape = SubResource( 1 )

[node name="SpawnDetectorShape" parent="SpawnDetector" index="0"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="3"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 4, 100, 24, 24 )

[node name="Tween" type="Tween" parent="." index="4"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
anims/float = SubResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Food_area_entered"]
